# my-garage

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  system.md
backend/: .gitignore  Dockerfile  alembic.ini  conftest.py  debug_settings.py  inspect_db.py  list_models.py  pyproject.toml  repro_invoice.py  requirements.txt  seed_admin_user.py  seed_notifications.py  test_api_helpers.py  test_auth_endpoints.py  test_backend_serving.py  test_identity_profile_settings.py  test_invoice_processing.py  test_notification_endpoints.py  test_storage_service.py  test_vehicle_document_rag_service.py  verify_settings.py
backend/alembic/: env.py
backend/alembic/versions/: 00de089e208f_change_part_quantity_to_float.py  02464d98749a_separate_vehicle_specs_into_dedicated_.py  12141c726307_add_user_model.py  50b4cf8a9cd2_replace_image_url_with_binary.py  66f88dd8b672_refactor_relationships.py  6eb98815c5b4_add_vehicle_fields.py  76df812ae51d_add_tax_amount_to_invoice.py  9c5a2b1d4e3f_add_compound_api_indexes.py  a7b3c1d9e2f4_backfill_track_ids_from_circuit_name.py  ad26658ad0ba_populate_track_data.py  ad89c3d45fe7_add_settings_table.py  add_usage_type_track_records.py  b3f1c7c9d2e4_add_vehicle_document_rag_tables.py  b9f41a0ee36f_initial_migration.py  c1623111d729_add_vehicle_image_binary.py  c1bfc74f9cc0_add_user_image_url.py  c4d7a7d9a2f1_migrate_vehicle_rag_embeddings_to_pgvector.py  ca7c8c4c3a96_add_tax_id_to_supplier.py  d122ed5bc1bf_add_track_model_and_update_trackrecord_.py  (+9 more)
backend/app/: database.py  main.py
backend/scripts/: enrich_tracks_from_wikipedia.py
(+446 files in other folders)
