[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-garage-backend"
version = "0.1.0"
description = "FastAPI backend for My Garage"
requires-python = ">=3.10"
dependencies = [
  "alembic==1.17.2",
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "bcrypt==4.0.1",
  "click==8.3.1",
  "cryptography==46.0.3",
  "fastapi==0.121.3",
  "google-auth==2.41.1",
  "google-auth-httplib2==0.2.1",
  "google-auth-oauthlib==1.2.3",
  "google-generativeai==0.8.5",
  "h11==0.16.0",
  "idna==3.11",
  "Mako==1.3.10",
  "MarkupSafe==3.0.3",
  "passlib[bcrypt]==1.7.4",
  "pdf2image==1.17.0",
  "pgvector==0.4.1",
  "Pillow==12.0.0",
  "psycopg2==2.9.11",
  "pydantic==2.12.4",
  "pydantic-settings==2.11.0",
  "pydantic_core==2.41.5",
  "pypdf==6.1.3",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "python-jose[cryptography]==3.5.0",
  "python-multipart==0.0.20",
  "requests==2.32.5",
  "sniffio==1.3.1",
  "SQLAlchemy==2.0.44",
  "sqlmodel==0.0.27",
  "starlette==0.50.0",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "uvicorn==0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
